<resources>
    <!-- Menu -->
    <string name="app_name">AppBipper</string>

    <!-- titles -->
    <string name="title_register">S\'enregistrer</string>
    <string name="title_login">Se connecter</string>
    <string name="title_server">Les serveurs</string>
    <string name="title_menu">Accueil</string>
    <string name="title_menu_list">Les menus</string>
    <string name="title_my_menu_list">Mes menus</string>
    <string name="title_create_menu">Créer un menu</string>
    <string name="title_desc_product">Le produit</string>
    <string name="title_person_list">Choisir le cuisinier</string>
    <string name="title_desc_menu">Le menu</string>
    <string name="title_notification">Les notifications</string>
    <string name="title_my_notification">Mes notifications</string>

    <!-- Register activity -->
    <string name="register_message">Veuillez saisir vos informations</string>
    <string name="register_male">Masculin</string>
    <string name="register_female">Féminin</string>
    <string name="register_register">S\'enregistrer</string>
    <string name="register_lastname">Votre nom</string>
    <string name="register_firstname">Votre prenom</string>
    <string name="register_phone">Téléphone portable</string>
    <string name="register_email">E-mail</string>
    <string name="register_password">Mot de passe</string>
    <string name="register_password_verify">Confirmation mot de passe</string>
    <string name="please_wait">Loading...</string>
    <string name="inscription_error_field_empty">Le champ est vide...</string>
    <string name="inscription_error_identical_password">Mot de passe non identique...</string>
    <string name="inscription_ok">Inscription terminée !</string>

    <!-- main activity -->
    <string name="welcome">Bienvenue</string>
    <string name="menu_tooltip">Veuillez sélectionner \"s\'enregistrer\" pour créer un compte ou \"se connecter\" si vous en avez déjà un</string>
    <string name="register">S\'enregistrer</string>
    <string name="sign">Se connecter</string>
    <string name="login_tooltip">Merci de vous connecter pour acceder à l\'application</string>
    <string name="forgot_password">Mot de passe oublié?</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Menu Activity -->
    <string name="menu_create_menu">Créer un menu</string>
    <string name="menu_all_menu">Tous les menus</string>
    <string name="menu_my_menu">Mes menus</string>
    <string name="menu_all_notifications">Toutes les notifications</string>
    <string name="menu_my_notifications">Mes notifications</string>
    <string name="menu_servers">Les servers</string>

    <!-- URL -->
    <string name="url_server">http://95.142.161.35:8080/</string>
    <string name="url_service_login">person/login</string>
    <string name="url_service_person">person/</string>
    <string name="url_service_person_delete">person/%1$s</string>
    <string name="url_service_product">product/</string>
    <string name="url_service_product_type">product?type=%1$s</string>
    <string name="url_service_menu">menu/</string>
    <string name="url_service_my_menu">person/menus/%1$s</string>
    <string name="url_service_buzz">buzz/</string>
    <string name="url_service_add_key">addkey/%1$s/%2$s/%3$s</string>
    <string name="url_service_notification">buzz/</string>
    <string name="url_service_my_notification">buzz/%1$s</string>

    <!-- list activity -->
    <string name="add_server">Ajouter un serveur</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>

    <!-- Menu list activity -->
    <string name="list_menu_title">Menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- fragments Products -->
    <string name="title_fragment_appetizer">Appéritifs</string>
    <string name="title_fragment_desserts">Desserts</string>
    <string name="title_fragment_dishes">Plats</string>
    <string name="title_fragment_entrees">Entrées</string>
    <string name="validate_list_products">Valider</string>

    <!-- activity_desc_product -->
    <string name="txt_title_product">Title</string>
    <string name="txt_price">Price</string>
    <string name="txt_calories">Calories</string>
    <string name="txt_type">Type</string>
    <string name="txt_discount">Discount</string>
    <string name="txt_value">value</string>
    <string name="btn_add_product">Ajouter</string>


    <string-array name="name_type_products">
        <item>Apéritif</item>
        <item>Entrée</item>
        <!-- For keep space at the end of Plat
            http://stackoverflow.com/questions/1587056/how-to-keep-the-spaces-at-the-end-and-or-at-the-beginning-of-a-string -->
        <!-- <item>Plat\u0020</item> -->
        <item>Plat</item>
        <item>Dessert</item>
    </string-array>


    <!-- activity_person_list -->
    <string name="person_title_activity">Choix du cuisinier</string>


    <!-- create menu -->
    <string name="menu_create">Le menu a été créé !</string>

    <!-- menu_item_list -->
    <string name="menu_element_number">N°</string>
    <string name="menu_element_server">Serveur:</string>
    <string name="menu_element_cooker">Cuisinier:</string>


    <string name="error_toast">Une erreur c\'est produite....</string>
    <string name="error_internet">Vous devez être connecté à internet...</string>
    <string name="error_products_empty">Vous n\'avez sélectionné aucun produit...</string>
    <string name="error_parse_json">Erreur: lecture du json</string>
    <string name="api_not_working">API NOT WORKING !</string>


    <!-- desc_menu -->
    <string name="desc_menu_total_remise">Total Remise : </string>
    <string name="desc_menu_total">Total : </string>

    <!-- buzz -->
    <string name="buzz_send">Votre notification a été envoyé !</string>
    <string name="buzz_user_not_connected">Le serveur n\'est pas connecté…</string>

    <!-- API firebase -->
    <string name="api_key_firebase">AIzaSyAscubzqTgD6OdB64LGUHaSMbRKtnhrh7I</string>

    <!-- units of money -->
    <string name="units_money">€</string>
    <string name="units_calorie">KJ</string>

    <!-- action bar -->
    <string name="action_refresh">Actualiser</string>
</resources>
