<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.mbds.fr.unice.appbipper.RegisterActivity">

    <Button
        android:id="@+id/register_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_register"
        style="@style/button_blue"
        android:layout_alignParentBottom="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/register_send">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/register_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/register_message"
                android:layout_marginTop="@dimen/form_margin_top"
                android:layout_marginBottom="@dimen/form_component_margin_bottom"/>

            <EditText
                android:id="@+id/register_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_text_edit"
                android:layout_marginTop="@dimen/form_name_margin_top"
                android:layout_marginBottom="@dimen/form_name_margin_bottom"
                android:layout_below="@id/register_message"
                android:inputType="textPersonName"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:hint="@string/register_lastname" />

            <EditText
                android:id="@+id/register_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_text_edit"
                android:layout_marginTop="@dimen/form_name_margin_top"
                android:layout_marginBottom="@dimen/form_name_margin_bottom"
                android:layout_below="@id/register_lastname"
                android:inputType="textPersonName"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:hint="@string/register_firstname" />


            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/register_radio_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/register_firstname"
                android:layout_alignParentLeft="true">
                <RadioButton android:id="@+id/register_radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_male"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/register_radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_female"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>


            <EditText
                android:id="@+id/register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_text_edit"
                android:layout_marginTop="@dimen/form_component_margin_top"
                android:layout_marginBottom="@dimen/form_component_margin_bottom"
                android:layout_below="@id/register_radio_gender"
                android:inputType="number"
                android:maxLength="8"
                android:drawableLeft="@drawable/ic_smartphone_black_24dp"
                android:hint="@string/register_phone"/>

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_text_edit"
                android:layout_marginTop="@dimen/form_component_margin_top"
                android:layout_marginBottom="@dimen/form_component_margin_bottom"
                android:layout_below="@id/register_phone"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:hint="@string/register_email"/>

            <EditText
                android:id="@+id/register_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_text_edit"
                android:layout_marginTop="@dimen/form_component_margin_top"
                android:layout_marginBottom="@dimen/form_component_margin_bottom"
                android:layout_below="@id/register_email"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:hint="@string/register_password"/>

            <EditText
                android:id="@+id/register_pass_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_text_edit"
                android:layout_marginTop="@dimen/form_component_margin_top"
                android:layout_marginBottom="@dimen/form_component_margin_bottom"
                android:layout_below="@id/register_pass"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:hint="@string/register_password_verify"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
