<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.mbds.fr.unice.appbipper.MainActivity">
    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView android:id="@+id/logo_mbds"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/logo_mbds"
            />

        <TextView
            android:id="@+id/welcome"
            android:layout_below="@id/logo_mbds"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/welcome"
            android:textSize="40dp"
            android:textStyle="bold"
            android:gravity="center|bottom"/>

        <TextView
            android:id="@+id/menu_tooltip"
            android:layout_below="@id/welcome"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/menu_tooltip"
            android:gravity="center|top"/>

        <Button
            android:id="@+id/register"
            android:layout_below="@id/menu_tooltip"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/register"
            android:background="@drawable/custom_button_blue"
            style="@style/button_blue"/>

        <Button
            android:id="@+id/sign"
            android:layout_below="@id/register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/sign"
            android:background="@drawable/custom_button_white"
            style="@style/button_white"/>

    </RelativeLayout>
</ScrollView>
