<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_desc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.mbds.fr.unice.appbipper.MenuDescActivity">

    <include
        android:id="@+id/summary_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/menu_item_list"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/summary_menu"
        android:layout_above="@+id/menu_desc_total_discount"
        />

    <TextView
        android:id="@+id/text_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/menu_desc_total_price"
        android:layout_toLeftOf="@+id/menu_desc_total_discount"
        android:text="@string/desc_menu_total_remise"
        android:layout_marginBottom="@dimen/desc_menu_margin_label_total"
        android:textStyle="bold"
        android:textSize="@dimen/menu_item_size_label"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/menu_desc_total_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/menu_desc_total_price"
        android:layout_toLeftOf="@+id/total_discount_unit"
        android:text="50"
        android:textSize="@dimen/desc_menu_size_label"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/total_discount_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/total_unit"
        android:layout_alignParentRight="true"
        android:text="@string/units_money"
        android:textSize="@dimen/desc_menu_size_label"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/menu_desc_total_price"
        android:layout_alignParentBottom="true"
        android:text="@string/desc_menu_total"
        android:layout_marginBottom="@dimen/desc_menu_margin_label_total"
        android:textStyle="bold"
        android:textSize="@dimen/menu_item_size_label"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/menu_desc_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/total_unit"
        android:layout_alignParentBottom="true"
        android:text="50"
        android:textSize="@dimen/desc_menu_size_label"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/total_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/units_money"
        android:textSize="@dimen/desc_menu_size_label"
        android:textColor="@color/colorPrimary"/>


</RelativeLayout>
